# leaf

./: BUILD_WINDOWS.md  build-windows.sh
leaf/: Cargo.toml
leaf-cli/: Cargo.toml
leaf-cli/src/: main.rs
leaf/src/: lib.rs  session.rs  sys.rs
leaf/src/app/: dispatcher.rs  dns_client.rs  logger.rs  mod.rs  nat_manager.rs  router.rs  stat_manager.rs
leaf/src/app/api/: api_server.rs
leaf/src/app/inbound/: manager.rs  mod.rs  network_listener.rs  tun_listener.rs
leaf/src/app/outbound/: manager.rs  selector.rs
leaf/src/common/: cmd_macos.rs  mod.rs
leaf/src/common/arch/: windows.rs
leaf/src/common/ifcfg/: mod.rs  windows.rs
leaf/src/config/internal/: config.proto  config.rs
leaf/src/config/json/: config.rs
leaf/src/mobile/: logger.rs  mod.rs
leaf/src/option/: mod.rs
leaf/src/proxy/: datagram.rs  mod.rs
leaf/src/proxy/amux/outbound/: stream.rs
leaf/src/proxy/chain/outbound/: datagram.rs  stream.rs
leaf/src/proxy/direct/: datagram.rs  stream.rs
leaf/src/proxy/drop/: datagram.rs  stream.rs
leaf/src/proxy/failover/: datagram.rs  mod.rs  stream.rs
leaf/src/proxy/obfs/: http.rs  tls.rs
leaf/src/proxy/private_tun/: mod.rs
leaf/src/proxy/private_tun/outbound/: datagram.rs  mod.rs  stream.rs
leaf/src/proxy/quic/outbound/: stream.rs
leaf/src/proxy/redirect/: datagram.rs  stream.rs
leaf/src/proxy/select/: datagram.rs  stream.rs
leaf/src/proxy/shadowsocks/outbound/: datagram.rs  stream.rs
leaf/src/proxy/static/: datagram.rs  stream.rs
leaf/src/proxy/tryall/: datagram.rs  stream.rs
leaf/src/proxy/tun/: inbound_smoltcp.rs  mod.rs
(+8 files in other folders)
