[package]
name = "leaf-cli"
version = "0.11.0"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2021"

[[bin]]
name = "leaf"
path = "src/main.rs"

[features]
default = [
  "leaf/inbound-shadowsocks",
  "leaf/outbound-private-tun",
  "leaf/outbound-failover",
  "leaf/outbound-select",
  "leaf/ring-aead",
  "leaf/config-json",
  "leaf/rustls-tls",
  "leaf/private_tun_mmsg",
  "leaf/private_tun_smart_mode",
  #"leaf/outbound-quic",
  #"leaf/outbound-quic",
  "leaf/ctrlc",
  #"leaf/auto-reload",
]

# Windows 平台特定的 features
windows = [
  "leaf/inbound-tun",
  "leaf/outbound-private-tun",
  "leaf/private_tun_smart_mode",
  "leaf/config-json",
  "leaf/ring-aead",
  "leaf/ctrlc",
]

macos = [
  "leaf/all-endpoints",
  "leaf/inbound-tun",
  "leaf/outbound-private-tun",
  "leaf/outbound-shadowsocks",
  "leaf/config-json",
  "leaf/ring-aead",
  "leaf/rustls-tls",
  "leaf/ctrlc",
]

[dependencies]
leaf = { path = "../leaf", default-features = false, optional = true }
tokio = { version = "1", features = ["rt"] }
argh = "0.1"
